--- a/themes/hugo-book/layouts/partials/docs/comments.html
+++ b/themes/hugo-book/layouts/partials/docs/comments.html
@@ -1,2 +1,16 @@
-<!-- This partial can be replaced to support other commenting engines -->
-{{ template "_internal/disqus.html" . }}
+<script src="https://giscus.app/client.js"
+        data-repo="xtod/agiscus"
+        data-repo-id="R_kgDONg3CYg"
+        data-category="Announcements"
+        data-category-id="DIC_kwDONg3CYs4Clbt6"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="light"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
